build_log.txt
   Compiling raft-core v0.1.0 (C:\Users\yuvis\OneDrive\Desktop\Weekend\antigravity\titan-distributed-sqlite\crates\raft-core)
warning: unused import: `store::RaftStateStore`
  --> crates\raft-core\src\lib.rs:11:5
   |
11 | use store::RaftStateStore;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0502]: cannot borrow `*self` as mutable because it is also borrowed as immutable
   --> crates\raft-core\src\lib.rs:98:13
    |
 97 |           for peer in &self.peers {
    |                       -----------
    |                       |
    |                       immutable borrow occurs here
    |                       immutable borrow later used here
 98 | /             self.send_message(
 99 | |                 *peer,
100 | |                 MessagePayload::RequestVote(RequestVoteArgs {
101 | |                     term: self.current_term,
...   |
105 | |                 }),
106 | |             );
    | |_____________^ mutable borrow occurs here

warning: unused variable: `nci`
   --> crates\raft-core\src\lib.rs:276:29
    |
276 |                         let nci = matches[majority_idx]; // since sorted ascending, this is the median
    |                             ^^^ help: if this is intentional, prefix it with an underscore: `_nci`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0502`.
warning: `raft-core` (lib) generated 2 warnings
error: could not compile `raft-core` (lib) due to 1 previous error; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: variable does not need to be mutable
   --> crates\raft-core\src\lib.rs:347:13
    |
347 |         let mut r = RaftNode::new(RaftNodeId(1), vec![], Duration::from_millis(300));
    |             ----^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> crates\raft-core\src\lib.rs:364:13
    |
364 |         let mut deliver = |msgs: &mut VecDeque<RaftMessage>, nodes: &mut [&mut RaftNode]| {
    |             ----^^^^^^^
    |             |
    |             help: remove this `mut`

warning: `raft-core` (lib test) generated 4 warnings (2 duplicates)
error: could not compile `raft-core` (lib test) due to 1 previous error; 4 warnings emitted
